# DL_Cuda

./: .gitignore  CMakeLists.txt  README.md
Run/: load_mnist.py  py_mnist.py  test_one_hot.py  test_pybind11.py  train_functions.py
Run/.ipynb_checkpoints/: HandwrittenDigitsRecognition_MNISTclean_Conv-checkpoint.ipynb  Keras_implementation-checkpoint.ipynb  load_mnist-checkpoint.py  programme_sketch-checkpoint.ipynb  py_mnist-checkpoint.py  test_pybind11-checkpoint.py
analysis/: PlotSoftmaxRT.ipynb  PlottingSetup.ipynb  check_mnist_reader.ipynb  colredmr.txt  colredmr1024th.txt  colredmr128th.txt  colredmr32.txt  colredmr512th.txt  colredmr64th.txt  comb_pointwise.txt  comb_pointwise_analysis.txt  copying.txt  fp_ew2d.txt  fp_ew2d1024th.txt  fp_ew2d128th.txt  fp_ew2d32th.txt  fp_ew2d512th.txt  fp_ew2d64th.txt  fp_ew2d_analysis.txt  matMulTimes.txt  matMulTimesCBlas.txt  matMulTimesOnDev.txt  matMulTimesOnDev_4096.txt  matMulTimes_4096.txt  matMulTimesdt1th.txt  plotNumbersExamples.ipynb  plotPointwise.ipynb  plotReduction.ipynb  plot_matMulTimes.ipynb  plot_matMulTimesonDev.ipynb  pointwise.txt  pointwise_analysis.txt  rowredcost.txt  rowredcost1024th.txt  rowredcost128th.txt  rowredcost32.txt  rowredcost512th.txt  rowredcost64th.txt  rowredcost_analysis.txt  rowredmr.txt  (+15 more)
src/: binding.cu  common.c  common.h  global.cu  global.h  timer.cpp  timer.h
src/cost/: costfunctions.cu  costfunctions.h  costs.cpp  costs.h
src/layers/: activations.cu  activations.h  layers.cpp  layers.h  linear.cpp  linear.h  linear_propagation.cu  linear_propagation.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
src/matrix_operations/: kernel_utils.cu  kernel_utils.h  matrix_operator.cu  matrix_operator.h  matrix_operator_gpu.cu  matrix_operator_gpu.h  plot_times.py  t_contract_d.cu  t_contract_d.h  t_contract_h.c  t_contract_h.h  tensor.h  test_matrix_operator.cu  test_matrix_operator.h  times.txt
src/neural_network/: matrix.cpp  matrix.h  mnist_reader.cpp  mnist_reader.h  neural_network.cpp  neural_network.h
src/run_scripts/: run_network.cpp  run_network.cu  run_network.h
src/test_scripts/: measure_network.cpp  run_test_matrix_operator.cu  test_CBlas.c  test_activations.cu  test_costs.cu  test_ew.cu  test_ew2d.cu  test_layers.cu  test_layers.h  test_matmul.cu  test_matrices_cpp.cpp  test_matrices_cpp.h  test_mnist_reader.cu  test_network.cpp  test_network.cu  test_network.h  test_step_network.cu  time_ew.cu  time_ew2d.cu  time_matmul.cu  time_network.cu  time_reduction.cu  time_softmax.cu
